# NetworkDesigner

./: .gitignore  3X3OscilloX8.nml  CMakeLists.txt  Computer.cpp  Computer.h  DesignPlan.cpp  EvenementHandler.cpp  EvenementHandler.h  Makefile  Makefile.Debug  Makefile.Release  Network.cpp  Network.h  NetworkDesigner  NetworkDesigner.pro  NetworkDesignerParser.cpp  NetworkDesignerParser.h  NetworkState.cpp  NetworkState2.cpp  NetworkStatesSet.cpp  NetworkStatesSet.h  Neuron.cpp  NeuronSynapse.h  SPECS.md  SetOfNetworkStatesSet.cpp  SignalsSlotsConnector.cpp  Simulation.h  SimulationActivity.h  SimulationAttractorsAndBasinsOfAttraction.cpp  SimulationAttractorsAndBasinsOfAttraction.h  SimulationAttractorsAndBasinsOfAttraction2.cpp  SimulationAttractorsAndBasinsOfAttraction2.h  SimulationChangement.h  SimulationDiffusion.h  Synapse.cpp  TheBigOne.nml (Case Conflict 1)  UpdateBlock.cpp  UpdateSchedulingPlan.cpp  UpdateSchedulingPlan.h  constFile.h  (+19 more)
.github/workflows/: android.yml  ci.yml  windows.yml
android/: AndroidManifest.xml
docs/: Doxyfile  RELEASE_NOTES.md  USER_GUIDE.md
examples/: Arabidopsis_premodel.nml  Arabiodopsis_thalina.nml  CardioRespiratoire.nml  EukarioteCell.nml  HeartBeat.nml  allPositive_And_Cycle.nml  anotherCoolNetwork.nml  eukarioteCells.nml
resources/: resources.qrc  style.qss
scripts/: oscillo.pl
src/: CMakeLists.txt
src/app/: Computer.cpp  Computer.h  DesignPlan.cpp  EvenementHandler.cpp  EvenementHandler.h  NetworkDesignerParser.cpp  NetworkDesignerParser.h  SignalsSlotsConnector.cpp  SignalsSlotsConnector.h  designplan.h  main.cpp  mainWindow.ui  networkdesigner.cpp  networkdesigner.h
src/core/network/: Network.h  Neuron.cpp  NeuronSynapse.h  Synapse.cpp
src/core/scheduling/: BlockSelector.cpp  BlockSelector.h  UpdateBlock.cpp  UpdateBlock.h  UpdateSchedulingPlan.cpp  UpdateSchedulingPlan.h
src/core/simulation/: Simulation.cpp  Simulation.h  SimulationActivity.cpp  SimulationActivity.h  SimulationAttractorsAndBasinsOfAttraction.cpp  SimulationAttractorsAndBasinsOfAttraction.h  SimulationAttractorsAndBasinsOfAttraction2.cpp  SimulationAttractorsAndBasinsOfAttraction2.h  SimulationChangement.cpp  SimulationChangement.h  SimulationDiffusion.cpp  SimulationDiffusion.h
src/core/state/: NetworkState.cpp  NetworkState.h  NetworkState2.cpp  NetworkState2.h  NetworkStatesSet.cpp  NetworkStatesSet.h  SetOfNetworkStatesSet.cpp  SetOfNetworkStatesSet.h
src/core/utils/: constFile.h  pCalculateTransitions.cpp  random-singleton.cpp  random-singleton.h
tests/: CMakeLists.txt
tests/integration/: test_nml_loading.cpp
tests/uat/: test_gui_smoke.cpp
tests/unit/: test_Network.cpp  test_NetworkState.cpp  test_NetworkStatesSet.cpp  test_Neuron.cpp  test_Simulation.cpp
